Fixes #588 Search box displays search button wrongly on Firefox (#596)

--- a/src/app/feed/feed-header/feed-header.component.scss
+++ b/src/app/feed/feed-header/feed-header.component.scss
@@ -65,7 +65,6 @@
 					}
 
 					#search-suffix-icon {
-						position: absolute;
 						right: 0;
 						pointer-events: none;
 						padding: 10px 15px 10px 0px;
